--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "expo": "~46.0.9",
+    "expo-local-authentication": "~12.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
