--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "expo-camera": "~12.3.0",
+    "expo-sharing": "~10.3.0",
+    "expo-media-library": "~14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
